<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="jrl.deint.inventory.ProductActivity">

        <ImageView
            android:id="@+id/imgvProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/products" />

        <TextView
            android:id="@+id/txvNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txvNombre" />

        <EditText
            android:id="@+id/edtNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/txvSerial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txvSerial" />

        <EditText
            android:id="@+id/edtSerial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <ImageView
            android:id="@+id/imgvQR"
            android:layout_width="@dimen/imgvQRancho"
            android:layout_height="@dimen/imgvQRalto"
            app:srcCompat="@drawable/QR_icon" />

        <TextView
            android:id="@+id/txvVendedor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txvVendedor" />

        <EditText
            android:id="@+id/edtVendedor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/txvModelo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txvModelo" />

        <EditText
            android:id="@+id/edtModelo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/txvCategoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txvCategoria" />

        <ExpandableListView
            android:id="@+id/elvCategoria"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/txvSubcategoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txvSubcategoria" />

        <ExpandableListView
            android:id="@+id/elvSubcategoria"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/txvTipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txvTipo" />

        <ExpandableListView
            android:id="@+id/elvTipo"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/txvDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txvDescripcion" />

        <EditText
            android:id="@+id/edtDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/txvPrecio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txvPrecio" />

        <EditText
            android:id="@+id/edtPrecio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/txvFechaCompra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txvFechaCompra" />

        <EditText
            android:id="@+id/edtFechaCompra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/txvUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txvUrl" />

        <EditText
            android:id="@+id/edtUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/txvNotas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txvNotas" />

        <EditText
            android:id="@+id/edtNotas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>
