<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ToggleButton
        android:id="@+id/tgbEnabled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/tgbEnabled"
        android:checked="true"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/txvName"
        app:layout_constraintStart_toEndOf="@+id/tgbEnabled" />

    <TextView
        android:id="@+id/txvDefault"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txvDefault"
        app:layout_constraintStart_toEndOf="@+id/tgbEnabled"
        app:layout_constraintTop_toBottomOf="@+id/txvName" />
</android.support.constraint.ConstraintLayout>